Fixing horizontal scroll on Firefox mobile

--- a/css/personalwebsite.css
+++ b/css/personalwebsite.css
@@ -20,8 +20,9 @@ body {
     text-align: center;
     display: flex;
     flex-direction: column;
-    max-width: 920px;
+    max-width: 720px;
     margin: auto;
+    padding: 0px 20px;
 }
 p {
     font-size: 1.25em;
@@ -59,13 +60,13 @@ section {
     align-self: center;
     margin: auto;
     text-align: center;
+    justify-content: space-between;
 }
 #contacts div {
     color: #36573e;
     font-size: 35px;
     padding: 20px;
-    margin: 15px;
-    border-radius: 8px;
+    /* margin: 10px; */
 }
 
 #contacts div a i {
